--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-requests
-scikit-learn
-numpy
-pandas
-chardet
-psycopg2
+certifi==2022.12.7
+chardet==5.0.0
+charset-normalizer==2.0.12
+idna==3.4
+joblib==1.1.1
+numpy==1.19.5
+pandas==1.1.5
+pkg_resources==0.0.0
+psycopg2==2.7.7
+python-dateutil==2.8.2
+pytz==2022.7.1
+requests==2.27.1
+scikit-learn==0.24.2
+scipy==1.5.4
+six==1.16.0
+threadpoolctl==3.1.0
+urllib3==1.26.14
